# precog_task

./: .gitignore  README.md  family_network.gexf  graph1.ipynb  main.py  pyproject.toml  rcgn.pth  rgcn_model.pth  rotate_model.pth  rotate_model_2.pth  rotate_recovered.pth
