[project]
name = "precog-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cdlib>=0.4.0",
    "dgl==2.4.0+cu121",
    "dglke>=0.1.2",
    "igraph>=1.0.0",
    "ipykernel>=7.1.0",
    "leidenalg>=0.11.0",
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pygraphviz>=1.14",
    "scipy>=1.15.3",
]
